# Raha

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
include/raha/core/: ApplicationConfig.hpp  AudioRenderer.hpp  Clock.hpp  DecoderBridge.hpp  FrameQueue.hpp  LibraryDatabase.hpp  MediaPlayer.hpp  MediaSource.hpp  PlaybackController.hpp  PlaylistManager.hpp  ScreenshotExporter.hpp  SeekController.hpp  SubtitleManager.hpp  VideoRenderer.hpp
include/raha/frontend/: App.hpp  ImGuiLayer.hpp
include/raha/platform/: PlatformAbstraction.hpp
include/raha/utils/: Logger.hpp  TaskQueue.hpp  ThreadPool.hpp
include/vplayer/core/: ApplicationConfig.hpp  AudioRenderer.hpp  Clock.hpp  DecoderBridge.hpp  FrameQueue.hpp  LibraryDatabase.hpp  MediaPlayer.hpp  MediaSource.hpp  PlaybackController.hpp  PlaylistManager.hpp  ScreenshotExporter.hpp  SeekController.hpp  SubtitleManager.hpp  VideoRenderer.hpp
include/vplayer/frontend/: App.hpp  ImGuiLayer.hpp
include/vplayer/platform/: PlatformAbstraction.hpp
include/vplayer/utils/: Logger.hpp  TaskQueue.hpp  ThreadPool.hpp
src/: CMakeLists.txt  main.cpp
src/core/: ApplicationConfig.cpp  AudioRenderer.cpp  Clock.cpp  DecoderBridge.cpp  FrameQueue.cpp  LibraryDatabase.cpp  MediaPlayer.cpp  MediaSource.cpp  PlaybackController.cpp  PlaylistManager.cpp  ScreenshotExporter.cpp  SeekController.cpp  SubtitleManager.cpp  VideoRenderer.cpp
src/frontend/: App.cpp  ImGuiLayer.cpp
src/platform/: PlatformAbstraction.cpp
src/utils/: Logger.cpp  TaskQueue.cpp  ThreadPool.cpp
tests/: CMakeLists.txt
tests/core/: ClockTests.cpp
